--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -71,7 +71,7 @@ test:
     default:
       database: tapir_test
       hosts:
-        - localhost:27017
+        - <%=ENV["MONGOID_SPEC_HOST"] || 'localhost' %>:<%=ENV["MONGOID_SPEC_PORT"] || '27017' %>
       options:
         consistency: :strong
         # In the test environment we lower the retries and retry interval to
